Feature: Dodanie sekcji AI Functions do 06_ai_ml_genai_integrations.ipynb
- ai_query() - uniwersalna funkcja LLM
- ai_analyze_sentiment() - analiza sentymentu
- ai_similarity() - podobieństwo semantyczne
- ai_extract() - ekstrakcja danych z tekstu
- ai_classify() - klasyfikacja tekstu
- ai_summarize() i ai_translate() - streszczanie i tłumaczenie
- Praktyczny przypadek użycia z pipeline

--- a/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
@@ -723,6 +723,411 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sekcja 5: AI Functions - Wbudowane funkcje AI w SQL\n",
+    "\n",
+    "**Databricks AI Functions** to natywne funkcje SQL, które pozwalają na wykorzystanie LLM bezpośrednio w zapytaniach SQL. \n",
+    "Są dostępne w Unity Catalog i działają na poziomie kolumn.\n",
+    "\n",
+    "**Dostępne funkcje:**\n",
+    "\n",
+    "| Funkcja | Opis | Przypadek użycia |\n",
+    "|---------|------|------------------|\n",
+    "| `ai_query()` | Wywołanie dowolnego prompta LLM | Generowanie, tłumaczenie, streszczenie |\n",
+    "| `ai_analyze_sentiment()` | Analiza sentymentu tekstu | Opinie klientów, recenzje |\n",
+    "| `ai_classify()` | Klasyfikacja tekstu do kategorii | Routing ticketów, tagowanie |\n",
+    "| `ai_extract()` | Ekstrakcja strukturyzowanych danych | Parsowanie dokumentów |\n",
+    "| `ai_fix_grammar()` | Korekta gramatyczna | Czyszczenie danych tekstowych |\n",
+    "| `ai_gen()` | Generowanie tekstu | Opisy produktów, emaile |\n",
+    "| `ai_similarity()` | Podobieństwo semantyczne tekstów | Deduplikacja, matching |\n",
+    "| `ai_summarize()` | Streszczenie tekstu | Podsumowania artykułów |\n",
+    "| `ai_translate()` | Tłumaczenie tekstu | Internacjonalizacja |\n",
+    "\n",
+    "> **Uwaga:** Te funkcje wymagają aktywnego Model Serving endpoint i są płatne per token."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1 ai_query() - Uniwersalna funkcja LLM\n",
+    "\n",
+    "`ai_query()` to najpotężniejsza funkcja - pozwala wywołać dowolny prompt na kolumnach tabeli."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.1a: Generowanie opisów produktów\n",
+    "-- Używamy ai_query() do wzbogacenia danych o opisy wygenerowane przez LLM\n",
+    "\n",
+    "SELECT \n",
+    "    product_id,\n",
+    "    product_name,\n",
+    "    category,\n",
+    "    price,\n",
+    "    ai_query(\n",
+    "        'databricks-meta-llama-3-3-70b-instruct',  -- nazwa modelu\n",
+    "        CONCAT(\n",
+    "            'Napisz krótki, atrakcyjny opis marketingowy (max 2 zdania) dla produktu: ',\n",
+    "            product_name, \n",
+    "            ' z kategorii: ', category,\n",
+    "            ' w cenie: ', price, ' USD'\n",
+    "        )\n",
+    "    ) AS generated_description\n",
+    "FROM workshop.silver.products\n",
+    "LIMIT 3;\n",
+    "\n",
+    "-- UWAGA: Funkcja ai_query() wymaga dostępnego endpointu Foundation Model\n",
+    "-- W środowisku bez endpointu otrzymasz błąd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.1b: Tłumaczenie danych na inny język\n",
+    "SELECT \n",
+    "    customer_id,\n",
+    "    first_name,\n",
+    "    city,\n",
+    "    state,\n",
+    "    ai_query(\n",
+    "        'databricks-meta-llama-3-3-70b-instruct',\n",
+    "        CONCAT('Przetłumacz na polski: Customer from ', city, ', ', state)\n",
+    "    ) AS polish_description\n",
+    "FROM workshop.silver.customers\n",
+    "LIMIT 3;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 ai_analyze_sentiment() - Analiza sentymentu\n",
+    "\n",
+    "Automatyczna analiza sentymentu tekstu (positive/negative/neutral)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.2: Analiza sentymentu opinii klientów\n",
+    "-- Tworzymy tymczasowe dane z opiniami do analizy\n",
+    "\n",
+    "WITH customer_reviews AS (\n",
+    "    SELECT 1 AS review_id, 'Świetny produkt! Bardzo polecam.' AS review_text\n",
+    "    UNION ALL\n",
+    "    SELECT 2, 'Okropna jakość, nigdy więcej nie kupię.'\n",
+    "    UNION ALL\n",
+    "    SELECT 3, 'Produkt jest OK, nic specjalnego.'\n",
+    "    UNION ALL\n",
+    "    SELECT 4, 'Fantastyczna obsługa klienta, super szybka dostawa!'\n",
+    "    UNION ALL\n",
+    "    SELECT 5, 'Rozczarowany. Produkt nie działa zgodnie z opisem.'\n",
+    ")\n",
+    "SELECT \n",
+    "    review_id,\n",
+    "    review_text,\n",
+    "    ai_analyze_sentiment(review_text) AS sentiment\n",
+    "FROM customer_reviews;\n",
+    "\n",
+    "-- Wynik: sentiment = 'positive', 'negative' lub 'neutral' dla każdej opinii"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3 ai_similarity() - Podobieństwo semantyczne\n",
+    "\n",
+    "Porównuje dwa teksty i zwraca wartość podobieństwa (0-1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.3: Znajdowanie podobnych produktów\n",
+    "-- Użyteczne do deduplikacji lub rekomendacji\n",
+    "\n",
+    "WITH product_pairs AS (\n",
+    "    SELECT \n",
+    "        'Laptop Dell Inspiron 15' AS product_a,\n",
+    "        'Notebook Dell Inspiron 15.6 cali' AS product_b\n",
+    "    UNION ALL\n",
+    "    SELECT \n",
+    "        'iPhone 15 Pro Max 256GB',\n",
+    "        'Samsung Galaxy S24 Ultra'\n",
+    "    UNION ALL\n",
+    "    SELECT \n",
+    "        'Kabel USB-C 1m',\n",
+    "        'Przewód USB Type-C 100cm'\n",
+    ")\n",
+    "SELECT \n",
+    "    product_a,\n",
+    "    product_b,\n",
+    "    ai_similarity(product_a, product_b) AS similarity_score\n",
+    "FROM product_pairs\n",
+    "ORDER BY similarity_score DESC;\n",
+    "\n",
+    "-- similarity_score > 0.8 = prawdopodobne duplikaty\n",
+    "-- similarity_score 0.5-0.8 = podobne produkty\n",
+    "-- similarity_score < 0.5 = różne produkty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4 ai_extract() - Ekstrakcja strukturyzowanych danych\n",
+    "\n",
+    "Wyciąga ustrukturyzowane informacje z tekstu (dawniej ai_parse_document)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.4: Ekstrakcja danych z nieustrukturyzowanego tekstu\n",
+    "-- Parsowanie informacji kontaktowych z wiadomości\n",
+    "\n",
+    "WITH messages AS (\n",
+    "    SELECT 1 AS msg_id, \n",
+    "           'Dzień dobry, nazywam się Jan Kowalski. Mój numer telefonu to 512-345-678, email: jan.kowalski@example.com' AS message\n",
+    "    UNION ALL\n",
+    "    SELECT 2, \n",
+    "           'Proszę o kontakt: Anna Nowak, tel. 601 234 567, anna.nowak@firma.pl'\n",
+    "    UNION ALL\n",
+    "    SELECT 3, \n",
+    "           'Zamówienie złożone przez Piotra Wiśniewskiego, kontakt: piotr.w@gmail.com, +48 700 800 900'\n",
+    ")\n",
+    "SELECT \n",
+    "    msg_id,\n",
+    "    message,\n",
+    "    ai_extract(\n",
+    "        message,\n",
+    "        ARRAY('imie_nazwisko', 'telefon', 'email')\n",
+    "    ) AS extracted_data\n",
+    "FROM messages;\n",
+    "\n",
+    "-- Wynik: STRUCT z polami imie_nazwisko, telefon, email dla każdej wiadomości"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.5 ai_classify() - Klasyfikacja tekstu\n",
+    "\n",
+    "Przypisuje tekst do jednej z predefiniowanych kategorii."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.5: Automatyczne kategoryzowanie ticketów supportowych\n",
+    "\n",
+    "WITH support_tickets AS (\n",
+    "    SELECT 1 AS ticket_id, 'Nie mogę się zalogować do systemu' AS issue\n",
+    "    UNION ALL\n",
+    "    SELECT 2, 'Kiedy otrzymam zwrot pieniędzy za zamówienie #12345?'\n",
+    "    UNION ALL\n",
+    "    SELECT 3, 'Produkt przyszedł uszkodzony, zdjęcia w załączniku'\n",
+    "    UNION ALL\n",
+    "    SELECT 4, 'Jak zmienić hasło do konta?'\n",
+    "    UNION ALL\n",
+    "    SELECT 5, 'Chcę anulować subskrypcję premium'\n",
+    ")\n",
+    "SELECT \n",
+    "    ticket_id,\n",
+    "    issue,\n",
+    "    ai_classify(\n",
+    "        issue,\n",
+    "        ARRAY('problemy_techniczne', 'zwroty_reklamacje', 'platnosci', 'konto_ustawienia', 'anulowanie')\n",
+    "    ) AS category\n",
+    "FROM support_tickets;\n",
+    "\n",
+    "-- Automatyczny routing ticketów do odpowiednich zespołów!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.6 ai_summarize() i ai_translate() - Streszczanie i tłumaczenie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.6a: Streszczanie długich opisów produktów\n",
+    "\n",
+    "WITH product_descriptions AS (\n",
+    "    SELECT 1 AS product_id, \n",
+    "           'Laptop biznesowy Dell Latitude 5540 to wszechstronny notebook zaprojektowany z myślą o profesjonalistach. Wyposażony w najnowszy procesor Intel Core i7 13. generacji, 16GB pamięci RAM DDR5 oraz szybki dysk SSD NVMe 512GB. Matowy ekran IPS 15.6 cala o rozdzielczości Full HD zapewnia doskonałą czytelność nawet w jasnym świetle. Aluminiowa obudowa gwarantuje trwałość, a bateria zapewnia do 10 godzin pracy. Zintegrowane zabezpieczenia obejmują czytnik linii papilarnych, TPM 2.0 oraz kamerę IR do Windows Hello.' AS full_description\n",
+    ")\n",
+    "SELECT \n",
+    "    product_id,\n",
+    "    ai_summarize(full_description) AS short_summary\n",
+    "FROM product_descriptions;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.6b: Tłumaczenie opisów produktów na wiele języków\n",
+    "\n",
+    "SELECT \n",
+    "    product_id,\n",
+    "    product_name,\n",
+    "    ai_translate(product_name, 'de') AS german_name,\n",
+    "    ai_translate(product_name, 'es') AS spanish_name,\n",
+    "    ai_translate(product_name, 'fr') AS french_name\n",
+    "FROM workshop.silver.products\n",
+    "LIMIT 5;\n",
+    "\n",
+    "-- Wspierane języki: 'en', 'de', 'es', 'fr', 'pl', 'it', 'pt', 'nl', 'ja', 'ko', 'zh' i więcej"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.7 Praktyczny przypadek użycia: Wzbogacenie danych klientów\n",
+    "\n",
+    "Połączenie wielu AI Functions w jednym pipeline do analizy i wzbogacenia danych."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Przykład 5.7: Kompletny pipeline analizy feedbacku klientów\n",
+    "\n",
+    "WITH customer_feedback AS (\n",
+    "    SELECT \n",
+    "        1 AS feedback_id,\n",
+    "        'John Smith' AS customer_name,\n",
+    "        'I absolutely love this product! Fast shipping and great quality. Will buy again!' AS feedback_text\n",
+    "    UNION ALL\n",
+    "    SELECT 2, 'Maria Garcia', 'Product arrived damaged. Customer service was unhelpful. Very disappointed.'\n",
+    "    UNION ALL\n",
+    "    SELECT 3, 'Klaus Mueller', 'Decent product for the price. Nothing special but works as expected.'\n",
+    ")\n",
+    "SELECT \n",
+    "    feedback_id,\n",
+    "    customer_name,\n",
+    "    feedback_text,\n",
+    "    \n",
+    "    -- Analiza sentymentu\n",
+    "    ai_analyze_sentiment(feedback_text) AS sentiment,\n",
+    "    \n",
+    "    -- Klasyfikacja do kategorii\n",
+    "    ai_classify(\n",
+    "        feedback_text, \n",
+    "        ARRAY('jakość_produktu', 'dostawa', 'obsługa_klienta', 'cena')\n",
+    "    ) AS main_topic,\n",
+    "    \n",
+    "    -- Streszczenie (dla długich tekstów)\n",
+    "    ai_summarize(feedback_text) AS summary,\n",
+    "    \n",
+    "    -- Tłumaczenie na polski\n",
+    "    ai_translate(feedback_text, 'pl') AS polish_translation\n",
+    "    \n",
+    "FROM customer_feedback;\n",
+    "\n",
+    "-- Wynik: Kompletna analiza każdego feedbacku w jednym zapytaniu!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📌 Podsumowanie AI Functions\n",
+    "\n",
+    "| Funkcja | Składnia | Przykład użycia |\n",
+    "|---------|----------|-----------------|\n",
+    "| `ai_query()` | `ai_query(model, prompt)` | Generowanie, dowolny prompt |\n",
+    "| `ai_analyze_sentiment()` | `ai_analyze_sentiment(text)` | Analiza opinii |\n",
+    "| `ai_classify()` | `ai_classify(text, categories)` | Routing ticketów |\n",
+    "| `ai_extract()` | `ai_extract(text, fields)` | Parsowanie dokumentów |\n",
+    "| `ai_similarity()` | `ai_similarity(text1, text2)` | Deduplikacja |\n",
+    "| `ai_summarize()` | `ai_summarize(text)` | Skracanie opisów |\n",
+    "| `ai_translate()` | `ai_translate(text, lang)` | Internacjonalizacja |\n",
+    "| `ai_fix_grammar()` | `ai_fix_grammar(text)` | Korekta tekstu |\n",
+    "| `ai_gen()` | `ai_gen(prompt)` | Generowanie treści |\n",
+    "\n",
+    "**Wymagania:**\n",
+    "- Unity Catalog \n",
+    "- Foundation Model APIs lub własny Model Serving endpoint\n",
+    "- Uprawnienia: `USE CATALOG`, `USE SCHEMA`, oraz dostęp do modelu\n",
+    "\n",
+    "**Koszty:** Rozliczane per token - pamiętaj o optymalizacji promptów!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
