Refactor: Uproszczenie ekstrakcji user_slug w 00_setup.ipynb
- Zmiana z re.sub() na re.split() dla lepszej czytelności
- user_slug teraz pobiera część przed pierwszym _ lub @

--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -76,12 +76,8 @@
     "raw_user = \"trainer\"  # Dla środowiska szkoleniowego\n",
     "\n",
     "import re\n",
-    "user_slug = re.sub(\n",
-    "    r'[^a-z0-9]', \n",
-    "    '_', \n",
-    "    raw_user.lower()\n",
-    ")\n",
     "\n",
+    "user_slug = re.split(r'[_@]', raw_user, 1)[0]\n",
     "\n",
     "# Opcja 1: Izolacja Katalogami (Czysty kod: FROM bronze.orders)\n",
     "# Wymaga uprawnień CREATE CATALOG\n",
