--- a/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
@@ -53,8 +53,7 @@
     "  - Unity Catalog włączony\n",
     "  - Uprawnienia: CREATE TABLE, CREATE SCHEMA, SELECT, MODIFY\n",
     "  - Klaster: Standard z 2-4 workers\n",
-    "- **Czas trwania**: 20 minut\n",
-    "- **Prerekvizity**: 03_basic_transformations_sql_pyspark.ipynb"
+    "- **Czas trwania**: 20 minut\n"
    ]
   },
   {
