--- a/DZIEN_3_Transformation_Governance_Integrations/03_lakeflow_jobs_orchestration.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/03_lakeflow_jobs_orchestration.ipynb
@@ -188,7 +188,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -202,7 +203,9 @@
      "title": ""
     }
    },
+   "outputs": [],
    "source": [
+    "task_02_transform%md\n",
     "### Task 2: Transform Data (`task_02_transform`)"
    ]
   },
