--- a/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
@@ -723,7 +723,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "14123782-3848-43c0-a571-b1ac39a38ec4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 5: AI Functions - Wbudowane funkcje AI w SQL\n",
     "\n",
@@ -749,7 +761,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ce8fb3ec-718d-4635-b219-e7ebe0e6b11e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.1 ai_query() - Uniwersalna funkcja LLM\n",
     "\n",
@@ -758,8 +782,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8d2215e8-b6b6-481c-bbfa-9b30557f0b83",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -792,8 +827,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "631d6524-4155-46a4-81cf-dd359fea7d7d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -816,7 +862,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "36915bb4-f06a-4700-bb58-2aade0b87190",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.2 ai_analyze_sentiment() - Analiza sentymentu\n",
     "\n",
@@ -825,8 +883,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9dcad4ba-26f8-442c-aa2c-0c2fc1d93c50",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -858,7 +927,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dcbe8cf3-7812-4cce-87e0-c123c0492376",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.3 ai_similarity() - Podobieństwo semantyczne\n",
     "\n",
@@ -867,8 +948,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1951ec8b-8c8f-41dd-bae6-00740068bad5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -905,7 +997,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "86b8f201-6a9c-4526-ae5e-94d96ab0087c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.4 ai_extract() - Ekstrakcja strukturyzowanych danych\n",
     "\n",
@@ -914,8 +1018,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7a05a47c-da1d-4268-b2d9-932efe735e52",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -949,7 +1064,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4655578d-8b68-4c6c-9c51-96c40cda87c9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.5 ai_classify() - Klasyfikacja tekstu\n",
     "\n",
@@ -958,8 +1085,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9f5fc58f-c06f-47b2-aace-18feb34cca42",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -993,15 +1131,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "be9fdf60-31ab-4046-af4c-3debffe5079e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.6 ai_summarize() i ai_translate() - Streszczanie i tłumaczenie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cb3ef317-4cb5-426a-bd49-3a07b6fd1081",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -1022,8 +1183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "daf0d7ea-b8af-42f0-9622-835aa70951c9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -1046,7 +1218,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f586f22-33e7-4ac3-b47e-59598584c4c5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 5.7 Praktyczny przypadek użycia: Wzbogacenie danych klientów\n",
     "\n",
@@ -1055,8 +1239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d2bea03c-a568-4ee2-81b7-b771a858f61f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
@@ -1102,7 +1297,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "81a04b4a-0102-4222-a1eb-5cea1d2a3fb4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 📌 Podsumowanie AI Functions\n",
     "\n",
