--- a/DZIEN_2_Lakehouse_Delta_Lake/02_lakeflow_connection.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_lakeflow_connection.ipynb
@@ -760,6 +760,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "91de6578-4381-4007-8cb9-5197c4254ce2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "---\n",
+    "\n",
+    "## Trigger Modes\n",
+    "\n",
+    "**Trigger** określa jak często streaming query wykonuje micro-batches:\n",
+    "\n",
+    "| Mode | Zachowanie | Use Case |\n",
+    "|------|------------|----------|\n",
+    "| `availableNow=True` | Przetworz wszystko → stop | Scheduled jobs ⭐ |\n",
+    "| `once=True` | Legacy (deprecated) | - |\n",
+    "| `processingTime=\"10s\"` | Co 10 sekund | Real-time |\n",
+    "| `continuous=\"1s\"` | Ultra-low latency | Experimental |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1697,184 +1727,6 @@
     "| **Auto Loader** | Pliki w cloud storage (streaming) |\n",
     "| **Lakeflow Connect** | Dane z systemów SaaS |\n",
     "| **Lakeflow Pipelines** | Transformacje Bronze → Silver → Gold |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "91de6578-4381-4007-8cb9-5197c4254ce2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "---\n",
-    "\n",
-    "## Sekcja 6: Trigger Modes\n",
-    "\n",
-    "**Trigger** określa jak często streaming query wykonuje micro-batches:\n",
-    "\n",
-    "| Mode | Zachowanie | Use Case |\n",
-    "|------|------------|----------|\n",
-    "| `availableNow=True` | Przetworz wszystko → stop | Scheduled jobs ⭐ |\n",
-    "| `once=True` | Legacy (deprecated) | - |\n",
-    "| `processingTime=\"10s\"` | Co 10 sekund | Real-time |\n",
-    "| `continuous=\"1s\"` | Ultra-low latency | Experimental |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "11e257da-505a-4647-bd83-697cb80ed37e",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Przykład 6.1: Test trigger modes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1e4a00f0-d011-4b82-ae81-206d82a5b8b5",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "TARGET_TABLE_TRIGGER = f\"{BRONZE_SCHEMA}.orders_trigger_test\"\n",
-    "CHECKPOINT_TRIGGER = f\"{CHECKPOINT_BASE_PATH}/trigger\"\n",
-    "SCHEMA_TRIGGER = f\"{SCHEMA_BASE_PATH}/trigger\"\n",
-    "\n",
-    "spark.sql(f\"DROP TABLE IF EXISTS {TARGET_TABLE_TRIGGER}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cd299659-1b2c-4d62-b66f-8d2720cfe66e",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "**Test `availableNow` (zalecane dla scheduled jobs):**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "be2ccc6b-c643-400d-a452-6a63e0143cfc",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "\n",
-    "df_trigger = (spark.readStream\n",
-    "    .format(\"cloudFiles\")\n",
-    "    .option(\"cloudFiles.format\", \"json\")\n",
-    "    .option(\"cloudFiles.schemaLocation\", SCHEMA_TRIGGER)\n",
-    "    .load(STREAMING_SOURCE_PATH)\n",
-    ")\n",
-    "\n",
-    "query_trigger = (df_trigger.writeStream\n",
-    "    .format(\"delta\")\n",
-    "    .outputMode(\"append\")\n",
-    "    .option(\"checkpointLocation\", CHECKPOINT_TRIGGER)\n",
-    "    .trigger(availableNow=True)\n",
-    "    .toTable(TARGET_TABLE_TRIGGER)\n",
-    ")\n",
-    "\n",
-    "query_trigger.awaitTermination()\n",
-    "elapsed = time.time() - start_time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cd447864-4082-4b65-8bfe-84bf3d6dcfd4",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "**Wyniki:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "17e58509-0063-415f-9770-a53d380a765f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "display(\n",
-    "    spark.createDataFrame([\n",
-    "        (\"Trigger Mode\", \"availableNow\"),\n",
-    "        (\"Execution Time\", f\"{elapsed:.2f}s\"),\n",
-    "        (\"Records Loaded\", str(spark.table(TARGET_TABLE_TRIGGER).count()))\n",
-    "    ], [\"Metric\", \"Value\"])\n",
-    ")"
    ]
   },
   {
